Пишу блок get-started

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
            </div>
         </div>
       </header>
+
+      <main class="main">
+        <section class="get-started">
+            <div class="get-started__container">
+                <h1 class="get-started__title">Крупнейшая коллекция природных артефактов</h1>
+                <p class="get-started__text">
+                    Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий пример европейского типа политической и социальной культуры.
+                </p>
+                <div class="get-started__link">
+                    <a href="#">
+                        <span>Исследовать</span>
+                        <img src="#" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+      </main>
     </div>
 </body>
 </html>
