Делаю artefacts блок

--- a/index.html
+++ b/index.html
@@ -55,19 +55,49 @@
           <div class="artefacts__container">
             <ul class="artefacts__gallery gallery">
               <li class="gallery__item">
-                <div class="gallery__image"><img src="#" alt="" /> <img src="" alt="" /></div>
+                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
                 <div class="gallery__inf-artefact">
-                  <h3>Fig. 1 (plant)</h3>
-                  <p>
+                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <p class="gallery__text">
                     Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
                     мира своевременно верифицированы.
                   </p>
-                  <button>Подробнее</button>
+                  <button class="gallery__btn">Подробнее</button>
                 </div>
               </li>
-              <li class="gallery__item"></li>
-              <li class="gallery__item"></li>
-              <li class="gallery__item"></li>
+              <li class="gallery__item">
+                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__inf-artefact">
+                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <p class="gallery__text">
+                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
+                    мира своевременно верифицированы.
+                  </p>
+                  <button class="gallery__btn">Подробнее</button>
+                </div>
+              </li>
+              <li class="gallery__item">
+                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__inf-artefact">
+                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <p class="gallery__text">
+                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
+                    мира своевременно верифицированы.
+                  </p>
+                  <button class="gallery__btn">Подробнее</button>
+                </div>
+              </li>
+              <li class="gallery__item">
+                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__inf-artefact">
+                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <p class="gallery__text">
+                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
+                    мира своевременно верифицированы.
+                  </p>
+                  <button class="gallery__btn">Подробнее</button>
+                </div>
+              </li>
             </ul>
 
             <div class="artefacts__slider">
