Доверстал блок artefacts

--- a/index.html
+++ b/index.html
@@ -66,34 +66,31 @@
                 </div>
               </li>
               <li class="gallery__item">
-                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__image"><img src="./images/artefacts/flower.jpg" alt="Flower" /></div>
                 <div class="gallery__inf-artefact">
-                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <h3 class="gallery__title">Fig. 2 (flower)</h3>
                   <p class="gallery__text">
-                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
-                    мира своевременно верифицированы.
+                    Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.
                   </p>
                   <button class="gallery__btn">Подробнее</button>
                 </div>
               </li>
               <li class="gallery__item">
-                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__image"><img src="./images/artefacts/leaf.jpg" alt="Leaf" /></div>
                 <div class="gallery__inf-artefact">
-                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <h3 class="gallery__title">Fig. 3 (leaf)</h3>
                   <p class="gallery__text">
-                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
-                    мира своевременно верифицированы.
+                    Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.
                   </p>
                   <button class="gallery__btn">Подробнее</button>
                 </div>
               </li>
               <li class="gallery__item">
-                <div class="gallery__image"><img src="./images/artefacts/plant.jpg" alt="Plant" /></div>
+                <div class="gallery__image"><img src="./images/artefacts/wood.jpg" alt="Wood" /></div>
                 <div class="gallery__inf-artefact">
-                  <h3 class="gallery__title">Fig. 1 (plant)</h3>
+                  <h3 class="gallery__title">Fig. 4 (wood)</h3>
                   <p class="gallery__text">
-                    Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
-                    мира своевременно верифицированы.
+                    Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.
                   </p>
                   <button class="gallery__btn">Подробнее</button>
                 </div>
