--- a/index.html
+++ b/index.html
@@ -104,6 +104,26 @@
             </div>
           </div>
         </section>
+
+        <section class="new-artefacts">
+          <div class="new-artefacts__container">
+            <h2 class="new-artefacts__title">Новые артефакты</h2>
+            <div class="new-artefacts__block">
+              <img class="new-artefacts__img" src="./images/new-artefacts/artefacts.jpg" alt="Artefacts">
+              <div class="new-artefacts__banner banner">
+               <div class="banner__header">
+                <h4 class="banner__title">Kurische Nehrung 24</h3>
+                  <p class="banner__text">Вот вам яркий пример современных тенденций - начало повседневной работы по формированию позиции выявляет срочную потребность методов управления процессами. 
+                  </br></br>Есть над чем задуматься: представители современных социальных резервов своевременно верифицированы.</p>
+                </div>
+               <a href="#" class="banner__link">
+                    <span>Читать далее</span>
+                    <img src="./images/new-artefacts/arrow.png" alt="Стрелка вправо" />
+                  </a>
+                </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
