Сделал блок help-proj

--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
             </div>
           </div>
         </section>
+
+        <section class="help-proj">
+          <div class="help-proj__container">
+            <h3 class="help-proj__title">Помочь проекту</h3>
+            <p class="help-proj__text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора, кроме определения прогресса профессионального сообщества. Как принято считать, элементы политического процесса рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. </p>
+            <form class="help-proj__form" action="#">
+              <input class="help-proj__input" type="text" name="name" placeholder="Имя">
+              <input class="help-proj__input" type="email" name="email" placeholder="Email">
+              <button class="help-proj__btn">Отправить</button>
+            </form>
+          </div>
+        </section>
       </main>
     </div>
   </body>
