Доверстал, но ещё не проверил и не добавил спрайты

--- a/index.html
+++ b/index.html
@@ -137,6 +137,21 @@
           </div>
         </section>
       </main>
+
+      <footer class="footer">
+      
+          <ul class="footer__social-media social-media">
+            <li class="social-media__item"><a href="#"><img src="./images/footer/youtube.png" alt="youtube"></a></li>
+            <li class="social-media__item"><a href="#"><img src="./images/footer/inst.png" alt="instagram"></a></li>
+            <li class="social-media__item"><a href="#"><img src="./images/footer/facebook.png" alt="facebook"></a></li>
+            <li class="social-media__item"><a href="#"><img src="./images/footer/twitter.png" alt="twitter"></a></li>
+        </ul>
+
+        <div class="copyright">
+          f&b <span class="trademark">®</span> 2020
+        </div>
+       
+      </footer>
     </div>
   </body>
 </html>
