Добавил внопку в header

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
             <div class="header__menu-buttons menu-buttons">
               <ul class="menu-buttons__list">
-                <li class="menu-buttons__item"><img src="./images/header/search.svg" alt="Поиск" /></li>
-                <li class="menu-buttons__item"><img src="./images/header/log-in.svg" alt="Вход" /></li>
+                <li class="menu-buttons__item"><button><img src="./images/header/search.svg" alt="Поиск" /></button></li>
+                <li class="menu-buttons__item"><button><img src="./images/header/log-in.svg" alt="Вход" /></button></li>
               </ul>
             </div>
           </div>
