Добавил элементы при наведении

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+
+
     <div class="wrapper">
       <header class="header">
         <div class="header__container">
@@ -28,7 +30,7 @@
             <div class="header__menu-buttons menu-buttons">
               <ul class="menu-buttons__list">
                 <li class="menu-buttons__item"><button><img src="./images/header/search.svg" alt="Поиск" /></button></li>
-                <li class="menu-buttons__item"><button><img src="./images/header/log-in.svg" alt="Вход" /></button></li>
+                <li class="menu-buttons__item"><button><img src="./images/header/log-in.svg" alt="login"></button></li>
               </ul>
             </div>
           </div>
